[tool.poetry]
name = "dnngior"
version = "0.0.4"
description = "build high-quality genome-scale metabolic model by using a deep neural network to guide gapfilling"
authors = ["Haris Zafeiropoulos <haris.zafeiropoulos@kuleuven.be>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cobra = "<=0.23.0"
gurobipy = "^10.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
